Fix card width when content is too small

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -330,6 +330,7 @@ strong, b {
   border-radius: 2px;
   margin-bottom: 20px;
   background-color: white;
+  width: 100%;
 }
 .card:hover {
   box-shadow:0 8px 17px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
